# drake_hardware

./: .gitignore  README.md
ESP32/arduino_example/: py_server.py
ESP32/arduino_example/ESP32_client/src/: main.cpp
ESP32/arduino_optitrack_example/: py_optitrack_server.py  py_optitrack_server_send_only.py
ESP32/arduino_optitrack_example/ESP32_client/src/: main.cpp  main_send_only.cpp
ESP32/cpp_example/: CMakeLists.txt
ESP32/cpp_example/src/: client.cpp  server.cpp
ESP32/py_cpp_example/: CMakeLists.txt  py_server.py
ESP32/py_cpp_example/src/: cpp_client.cpp
ESP32/py_example/: client.py  server.py
OptiTrack/: controller.py  optitrack.py  optitrack_drake.py  test_drake_optitrack.py
Teensy/: serial_node.py
Teensy/Serial/src/: main.cpp
Teensy/cpp_example/: CMakeLists.txt
Teensy/cpp_example/Serial/: platformio.ini
Teensy/cpp_example/Serial/src/: main.cpp
Teensy/cpp_example/inc/: SerialNode.h
Teensy/cpp_example/src/: SerialNode.cpp  main.cpp
Teensy/py_example_optitrack/: serial_node.py
Teensy/py_example_optitrack/Serial/src/: main.cpp
interpolator/: CMakeLists.txt
interpolator/data/: plot.ipynb  test.ipynb
interpolator/inc/: Interpolator.h  LinearInterpolator.h
interpolator/src/: Interpolator.cpp  LinearInterpolator.cpp  main.cpp  main_linear.cpp
ros_demo/: README  drake_publisher.py  drake_subscriber.py  mpc.py  ros_publisher.py
